# android-awt

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  publish.sh  settings.gradle
.github/workflows/: android-ci.yml
awtcompat/: build.gradle
awtcompat/src/main/cpp/: CMakeLists.txt  awtcompat_native_components.c
awtcompat/src/main/java/org/apache/harmony/awt/: Utils.java
awtcompat/src/main/java/org/apache/harmony/awt/gl/color/: NativeCMM.java  NativeImageFormat.java
awtcompat/src/main/java/org/apache/harmony/awt/gl/image/: GifDecoder.java  JpegDecoder.java  PngDecoder.java
awtcompat/src/main/java/ro/andob/awtcompat/nativec/: AwtCompatNativeComponents.java
devenv/: build.gradle
devenv/src/main/: AndroidManifest.xml
devenv/src/main/java/ro/andob/awtcompat/devenv/: App.java  MainActivity.kt
devenv/src/main/res/layout/: activity_main.xml
devenv/src/main/res/values/: strings.xml  styles.xml
